--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -18,7 +18,7 @@ Somit ist für Software Engineering in erster Linie in der Schicht Qualitätsasp
 
 \section{Softwareentwicklungsprozesse}\label{sec:chapter.2: Softwareentwicklungsprozesse}
 
-Für das Verständnis, die Schaffung oder Unternehmung von etwas Großem, fertigen Menschen in der Regel ein vereinfachtes Bild davon an. Hierfür nehmen sie Maß, fertigen eine Skizze oder einen Plan an oder orientieren sich an einem Vorbild, bzw. bauen sich eines. Dies geschieht normalerweise mit Papier und Schreibzeug, anderen Materialien oder einem Computer. Besonders für die Lösung von komplexen wissenschaftlichen Problemen oder bei großen Konstruktionsaufgaben ist dies unumgänglich \cite{Hesse2008}. \newline
+Für das Verständnis, die Schaffung oder Unternehmung von etwas Großem, fertigen Menschen in der Regel ein vereinfachtes Bild davon an. Hierfür nehmen sie Maß, fertigen eine Skizze oder einen Plan an oder orientieren sich an einem Vorbild bzw. bauen sich eines. Dies geschieht normalerweise mit Papier und Schreibzeug, anderen Materialien oder einem Computer. Besonders für die Lösung von komplexen wissenschaftlichen Problemen oder bei großen Konstruktionsaufgaben ist dies unumgänglich \cite{Hesse2008}. \newline
 Hierbei stützten sich die Menschen auf Modelle, welche als Stellvertreter für die Sache, die verstanden, geschaffen, unternommen oder betrieben werden soll, angesehen werden kann \cite{Hesse2008}. \newline
 Insbesondere die heutzutage von Softwareentwicklern zu erstellenden Softwareprodukte zeichnen sich durch ein hohes Maß an Komplexität und Umfang aus. Neben den Erwartungen von Kunden hinsichtlich Qualität müssen Softwaresysteme ebenfalls termingerecht und innerhalb eines vorgegebenen Budgetrahmens erstellt werden. Effektive und effiziente Softwareentwicklungsprozesse gewinnen somit immer mehr an Bedeutung \cite{Grechenig2010}.
 Modell leitet sich von dem lateinischen Begriff  \glqq modelus\grqq \ 
@@ -52,9 +52,9 @@ Eine Schnittstelle zwischen diesen beiden Projekttypen bilden die \textit{Mittel
 
 \subsection{Schwergewichtige und Leichtgewichtige Prozessmodelle}
 
-Aus der eben erfolgten Einteilung von Software-Projekten lässt sich eine Einteilung von Software-Prozessmodellen in \textit{Leichtgewichtige} und \textit{Schwergewichtige Prozessmodelle} ableiten \cite{Hanser2010}. \newline
-\textit{Leichtgewichtige Prozessmodelle} eignen sich eher für kleine Teams, bei denen keine detaillierte Anforderungserhebung stattfindet, da die Kommunikation sowohl innerhalb des Teams als auch mit dem Kunden auf Grund der kleinen Teamgröße gut funktioniert. Da viele Informationen hier informell über kurze Kommunikationswege weitergegeben werden, ist eine ausführliche Dokumentation derer nicht notwendig. \cite{Hanser2010}. \newline
-Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{Schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen, ist beispielsweise eine Vorgehensweise mit einem \textit{Schwergewichtigen Prozessmodell} sinnvoll \cite{Hanser2010}. \newline
+Aus der eben erfolgten Einteilung von Software-Projekten lässt sich eine Einteilung von Software-Prozessmodellen in \textit{leichtgewichtige} und \textit{schwergewichtige Prozessmodelle} ableiten \cite{Hanser2010}. \newline
+\textit{leichtgewichtige Prozessmodelle} eignen sich eher für kleine Teams, bei denen keine detaillierte Anforderungserhebung stattfindet, da die Kommunikation sowohl innerhalb des Teams als auch mit dem Kunden auf Grund der kleinen Teamgröße gut funktioniert. Da viele Informationen hier informell über kurze Kommunikationswege weitergegeben werden, ist eine ausführliche Dokumentation derer nicht notwendig. \cite{Hanser2010}. \newline
+Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen, ist beispielsweise eine Vorgehensweise mit einem \textit{schwergewichtigen Prozessmodell} sinnvoll \cite{Hanser2010}. \newline
 
 
 
