--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -7,25 +7,22 @@ In diesem Kapitel werden die Anforderungen an den in Kapitel 5 folgenden Verglei
 Bisher gibt es nur wenige Arbeiten, welche sich mit deklarativen Prozessmodellierungssprachen und insbesondere mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Aus diesem Grund soll in der vorliegenden Arbeit ein Vergleich der Anwendbarkeit zwischen deklarativen und imperativen Prozessmodellierungssprachen im Kontext von Softwareentwicklungsprozessen durchgeführt werden. Hierbei soll die Eignung der beiden Prozessmodellierungssprachen für die Modellierung beurteilt werden. Weiterhin sollen die Stärken und Grenzen der beiden Modellierungssprachen aufgezeigt werden und dadurch herausgefunden werden, ob eine der beiden Modellierungssprachen über eine bessere Anwendbarkeit bei der Modellierung verfügt als die andere \cite{list2006evaluation}.\newline
 Hierfür sollen die imperativen und deklarativen Prozessmodelle, welche für die drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell-XT erstellt werden, im Hinblick auf verschiedene Vergleichskriterien, untersucht werden. Da es sich bei Scrum um ein leichtgewichtiges Softwareentwicklungsprozessmodell, beim V-Modell XT um ein schwergewichtiges Softwareentwicklungsprozessmodell und bei Open UP um ein mittelgewichtiges Softwareentwicklungsprozessmodell handelt eignen sich diese drei besonders gut zum Vergleichen der imperativen und deklarativen Modellierung als unterschiedlich große Metamodelle. Außerdem liegen den in imperativer und deklarativer Modellierungssprache zu erstellenden Prozessmodellen so jeweils die gleichen Metamodelle zugrunde, was eine objektive Bewertung für den Vergleich gewährleistet \cite{list2006evaluation}. \newline
 
-Es sollen die imperativen und deklarativen Modellierungssprachen in Hinblick auf deren Erfüllung der in Kapitel 3.1.1 vorgestellten \textit{Grundsätze ordnungsgemäßer Modellierung} untersucht werden, da durch deren Einhaltung die Qualität, Klarheit und Konsistenz der Prozessmodelle gesichert wird \cite{freund2007}. Somit lässt sich hierdurch die Eignung der beiden Prozessmodellierungssprachen sehr gut überprüfen. Falls eine von beiden Prozessmodellierungssprachen die Modellierungsgrundsätze wesentlich schlechter einhalten kann als die andere, so ist sie zum Modellieren deutlich weniger geeignet, da die hierdurch entstandenen Prozessmodelle geringere Qualität, Klarheit und Konsistenz aufweisen. Nachfolgend werden die erstellten Prozessmodelle im Hinblick auf \textit{Richtigkeit}, \textit{systematischen Aufbau}, \textit{Relevanz}, \textit{Klarheit}, \textit{Wirtschaftlichkeit} und \textit{Vergleichbarkeit} verglichen. Hierfür werden für jeden Modellierungsgrundsatz verschiedene Kriterien festgelegt, mit deren Hilfe die Einhaltung der Modellierungsgrundsätze für die jeweilige Modellierungssprache in Kapitel 5 überprüft wird. \newline
+Es sollen die imperativen und deklarativen Modellierungssprachen in Hinblick auf deren Erfüllung der in Kapitel 3.1.1 vorgestellten \textit{Grundsätze ordnungsgemäßer Modellierung} untersucht werden, da durch deren Einhaltung die Qualität, Klarheit und Konsistenz der Prozessmodelle gesichert wird \cite{freund2007}. Somit lässt sich hierdurch die Eignung der beiden Prozessmodellierungssprachen sehr gut überprüfen. Falls eine von beiden Prozessmodellierungssprachen die Modellierungsgrundsätze wesentlich schlechter einhalten kann als die andere, so ist sie zum Modellieren deutlich weniger geeignet, da die hierdurch entstandenen Prozessmodelle geringere Qualität, Klarheit und Konsistenz aufweisen \cite{freund2007}. Nachfolgend werden die erstellten Prozessmodelle im Hinblick auf \textit{Richtigkeit}, \textit{systematischen Aufbau}, \textit{Relevanz}, \textit{Klarheit}, \textit{Wirtschaftlichkeit} und \textit{Vergleichbarkeit} verglichen. Hierfür werden für jeden Modellierungsgrundsatz verschiedene Kriterien festgelegt, mit deren Hilfe die Einhaltung der Modellierungsgrundsätze für die jeweilige Modellierungssprache in Kapitel 5 überprüft wird. \newline
 
 \subsection{Richtigkeit}
-Für den Vergleich der Richtigkeit der Prozessmodelle wird die syntaktische und semantische Richtigkeit der Prozessmodelle untersucht. Die syntaktische Korrektheit soll dahingehend geprüft werden, ob sich die jeweiligen Modelle unter Einhaltung der Modellierungsregeln der jeweiligen Prozessmodellierungssprache erstellen lassen. Bei der semantischen Korrektheit der Prozessmodelle soll verglichen werden, in wie weit die mit deklarativer bzw. imperativer Prozessmodellierungssprache erstellten Prozessmodelle dem zugrunde liegenden Metamodell gegenüber vollständig und konsistent sind. Falls wesentliche Aspekte des Metamodells nicht darstellbar sind, leidet der Nutzen des Prozessmodells erheblich \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.  \newline
-
+Für den Vergleich der Richtigkeit der Prozessmodelle wird die syntaktische und semantische Richtigkeit der Prozessmodelle untersucht. Die syntaktische Korrektheit soll dahingehend geprüft werden, ob sich die jeweiligen Modelle unter Einhaltung der Modellierungsregeln der jeweiligen Prozessmodellierungssprache erstellen lassen. Bei der semantischen Korrektheit der Prozessmodelle soll verglichen werden, in wie weit die mit deklarativer bzw. imperativer Prozessmodellierungssprache erstellten Prozessmodelle dem zugrunde liegenden Metamodell gegenüber vollständig und konsistent sind. Falls wesentliche Aspekte des Metamodells nicht darstellbar sind, leidet der Nutzen des Prozessmodelles erheblich \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.  \newline
 \subsubsection{A 1.1}
 
-Die Überprüfung der syntaktischen Richtigkeit der Modelle soll mit Hilfe der Modellierungstools Signavio und Declare durchgeführt werden. Beide Programme verfügen über eine automatische Überprüfung der syntaktischen Korrektheit der dort erstellten Modelle. Somit soll nach dem Modellieren der jeweiligen Prozessmodelle in den entsprechenden Modellierungstools eine automatische Überprüfung der syntaktischen Korrektheit durchgeführt werden. \newline
-
+Die Überprüfung der syntaktischen Richtigkeit der Modelle soll mit Hilfe der Modellierungstools Signavio und Declare durchgeführt werden. Beide Programme verfügen über eine automatische Überprüfung der syntaktischen Korrektheit der dort erstellten Modelle. Somit soll nach dem Modellieren der jeweiligen Prozessmodelle in den entsprechenden Modellierungstools eine automatische Überprüfung der syntaktischen Korrektheit durchgeführt werden \cite{journals95, becker2012prozessmanagement}. \newline
 \subsubsection{A 1.2}
 
-Zum Vergleich der semantischen Korrektheit soll überprüft werden, ob eine der beiden Prozessmodellierungssprachen die Struktur des Metamodells und das dort beschriebene Verhalten besser abbildet als die andere. Insbesondere soll hier untersucht werden, ob es Grenzen in der Darstellbarkeit der abzubildenden Aspekte des Metamodells gibt \cite{journals95, becker2012prozessmanagement}. \newline
-
+Zum Vergleich der semantischen Korrektheit soll überprüft werden, ob eine der beiden Prozessmodellierungssprachen die Struktur des Metamodells und das dort beschriebene Verhalten besser abbildet als die andere. Insbesondere soll hier untersucht werden, ob es Grenzen in der Darstellbarkeit der abzubildenden Aspekte des Metamodells gibt. Um dies zu überprüfen, sollen die imperativen und deklarativen Modelle einander direkt gegenüber gestellt werden \cite{journals95, becker2012prozessmanagement}. \newline
 \subsection{Systematischer Aufbau}
 
 Da nicht alle Informationen, wie z.B. Daten und Funktionen in einem Prozessmodell abgebildet werden können, ist die Integration anderer Sichten in das Prozessmodell sehr wichtig, um wirklich alle Informationen aus dem Metamodell abbilden zu können. Hier können Rückschlüsse auf die Eignung zur Modellierung gezogen werden und eventuelle Grenzen der Prozessmodellierungssprache aufgezeigt werden \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.
 
 \subsubsection{A 2.1}
-Um den systematischen Aufbau der imperativen und deklarativen Prozessmodelle zu vergleichen, sollen die Prozessmodelle dahingehend untersucht werden, in wie weit sie die Integration anderer Sichten (d.h. die Darstellung von Artefakten im Prozessmodell) in das Prozessmodell unterstützen und Verweise auf bestehende Datenmodelle zulassen. 
+Um den systematischen Aufbau der imperativen und deklarativen Prozessmodelle zu vergleichen, sollen die Prozessmodelle dahingehend untersucht werden, in wie weit sie die Integration anderer Sichten (d.h. die Darstellung von Artefakten im Prozessmodell) in das Prozessmodell unterstützen und Verweise auf bestehende Datenmodelle zulassen \cite{journals95, freund2007,reinshagen2009}.. 
 
 \subsection{Relevanz}
 
@@ -33,7 +30,7 @@ Beim Vergleich der Relevanz der Prozessmodelle sollen die mit BPMN bzw. ConDec m
 
 \subsubsection{A 3.1}
 
-Hier soll ein direkter Vergleich zwischen den imperativen und deklarativen Prozessmodellen durchgeführt werden. Anhand von diesem soll festgestellt werden, ob in einer von beiden Prozessmodellierungssprachen mehr der minimal relevanten Informationen zum Metamodell abgebildet werden können als in der anderen.\newline
+Hier soll ein direkter Vergleich zwischen den imperativen und deklarativen Prozessmodellen durchgeführt werden. Anhand von diesem soll festgestellt werden, ob in einer von beiden Prozessmodellierungssprachen mehr der minimal relevanten Informationen zum Metamodell abgebildet werden können als in der anderen \cite{journals95, freund2007,reinshagen2009}..\newline
 
 \subsection{Klarheit}
 
@@ -46,7 +43,7 @@ Es soll die Anzahl an Gateways in BPMN und die Anzahl Constraints in ConDec betr
 Da die Existenz-Constraints relativ einfach zu verstehen sind \cite{thesis_maja, sabrina933}, sollen sie beim Vergleich in Kapitel 5 mit den Sequenzflusselementen gleichgesetzt werden und haben somit auch in etwa eine geistige Gewichtung von 1 \cite{thesis_maja,haisjackl2014understanding, gruhn2006adopting,sabrina933}. \newline
 Da die Constraints in ConDec genau wie die Gateways in BPMN Patterns darstellen, müssten sie ebenfalls alle Werte für die geistige Gewichtung zwischen 2 und 7 annehmen. Die Constraints können jedoch nicht direkt den Gateways in BPMN zugeordnet werden und somit lassen sich die geistigen Gewichtungen der Gateways nicht auf die Constraints übertragen. Deshalb soll im Vergleich in Kapitel 5 nur die jeweilige Anzahl an Gateways in BPMN mit der Anzahl an Constraints im ConDec-Modell verglichen werden. Es soll somit auch bei den Gateways in BPMN keine Unterscheidung zwischen den Gateways stattfinden \cite{thesis_maja,haisjackl2014understanding, gruhn2006adopting}. \newline
 Zudem soll auch die Anzahl an unterschiedlichen Gateways in BPMN und Constraints in ConDec betrachtet werden. Denn sowohl bei BPMN als auch bei ConDec wurde in Studien herausgefunden, dass gerade die Kombination von vielen verschiedenen Gateways/Constraints einen sehr großen negativen Einfluss auf das Verständnis hat \cite{gruhn2006adopting, thesis_maja,haisjackl2014understanding, sabrina933}. \newline
-Somit sollen beim Vergleich in Kapitel 5 die Anzahl an Sequenzfluss/Existenz Constraints, Gateways/Constraints und unterschiedliche Gateways/Constraints bei den deklarativen und imperativen Modellen direkt gegenüber gestellt werden. Hierbei soll das Kriterium höhere Anzahl an Sequenzfluss/Existenz Constraints einfach gewichtet und die Kriterien höhere Anzahl an Gateways/Constraints und unterschiedliche Gateways/Constraints jeweils doppelt gewichtet werden. Das Modell, welches sodann die höhere Anzahl aufweist, soll als das komplexere Modell eingestuft werden und erfüllt die \textit{Klarheit} dadurch weniger.
+Somit sollen beim Vergleich in Kapitel 5 die Anzahl an Sequenzfluss/Existenz Constraints, Gateways/Constraints und unterschiedliche Gateways/Constraints bei den deklarativen und imperativen Modellen direkt gegenüber gestellt werden. Hierbei soll das Kriterium höhere Anzahl an Sequenzfluss/Existenz Constraints einfach gewichtet und die Kriterien höhere Anzahl an Gateways/Constraints und unterschiedliche Gateways/Constraints jeweils doppelt gewichtet werden. Das Modell, welches sodann unter beachtung der Gewichtung die höhere Anzahl aufweist, soll als das komplexere Modell eingestuft werden und erfüllt die \textit{Klarheit} dadurch weniger.
 
 \subsubsection{A 4.2}
 Zudem soll untersucht werden, ob bei dem mit ConDec erstellten Modell ein klarer Einstiegspunkt mit Hilfe des Init-Constraints dargestellt werden kann. Das Init-Constraint kann bei ConDec nur einer einzigen Aktivität im Modell zugewiesen werden. Kommen mehrere Aktivitäten als Einstiegspunkt im Modell in Frage, so lassen sich diese in ConDec nicht klar kennzeichnen. Es existieren Studien darüber \cite{haisjackl2014understanding, sabrina933}, dass sich dies negativ auf das Verständnis von ConDec Modellen auswirkt. \newline
@@ -75,7 +72,7 @@ Die Vergleichbarkeit soll in Bezug auf das Ausführungsverhalten der imperativen
 Außerdem soll die Größe der jeweiligen Prozessmodelle als Vergleichskriterium herangezogen werden. Hier soll die Gesamtanzahl der notwendigen Elemente zur Darstellung des Prozessmodells verglichen werden. Es soll festgestellt werden, ob bei Verwendung einer imperativen oder deklarativen Prozessmodellierungssprache wesentlich mehr Elemente zur Darstellung des gleichen Prozesses notwendig sind \cite{leimeister2012, journals95, freund2007,reinshagen2009}.
 
  \subsubsection{A 6.3}
-Es soll insbesondere untersucht werden, ob die Abstraktionsgrade der Prozessmodelle sich wesentlich voneinander unterscheiden, d.h. es soll untersucht werden, ob es bei einer der beiden Prozessmodellierungssprachen Grenzen in der Darstellbarkeit gibt \cite{leimeister2012, journals95, freund2007,reinshagen2009}.
+Es soll insbesondere untersucht werden, ob die Abstraktionsgrade der Prozessmodelle sich wesentlich voneinander unterscheiden, d.h. es soll untersucht werden, ob es bei einer der beiden Prozessmodellierungssprachen Grenzen in der Darstellbarkeit gibt. Hierfür sollen die imperativen und deklarativen Modelle einander direkt gegenüber gestellt werden \cite{leimeister2012, journals95, freund2007,reinshagen2009}.
 
 Eine Übersicht über die Modellierungsgrundsätze und die jeweiligen Vergleichskriterien und Unterkriterien mit ihren Abkürzungen bietet Abbildung \ref{fig:TabelleKriterien}.
 
