--- a/Masterarbeit 4/Tex/danksagung.tex
+++ b/Masterarbeit 4/Tex/danksagung.tex
@@ -1,3 +1,15 @@
 \section*{Danksagung}
 
+An dieser Stelle möchte ich mich bei allen bedanken, die mich während meines Studiums und bei der Erstellung meiner Masterarbeit unterstützt haben.
 
+Ein besonderer Dank gilt meinem Betreuer Herrn Gregor Grambow, der mir während des Verfassens meiner Masterarbeit unterstützend zur Seite stand und mir mit großer Hilfsbereitschaft, Korrekturlesen und kritischen Hinweisen bei der Erstellung dieser Arbeit geholfen hat.
+
+Zudem danke ich allen Studenten und Doktoranden, die an meiner Studie teilgenommen haben und sich die Zeit genommen haben, meinen Fragebogen auszufüllen.
+
+Außerdem möchte ich Herrn Prof. Dr. Manfred Reichert danken, der es mir ermöglicht hat, diese Arbeit am Institut für Datenbanken und Informationssysteme schreiben.
+
+Zudem möchte ich mich bei meinen Betreuern bei den Unternehmen Airbus Group, Nokia und Daimler AG bedanken, welche mir die letzten fünf Jahre durch Werkstudententätigkeiten die Möglichkeit gegeben haben meine theoretischen Kenntnisse durch praktische Erfahrungen zu vertiefen und zu erweitern. 
+An dieser Stelle möchte ich auch meinen Arbeitskollegen in diesen Unternehmen für die gute Zusammenarbeit danken.
+
+Des Weiteren möchte ich mich bei Freunden und Kommilitonen der Universität Ulm bedanken für ihre moralische Unterstützung während des Studiums und beim Verfassen dieser Arbeit bedanken. Zudem möchte ich meinen Kommilitonen der Universität Ulm für die angenehme Studienzeit danken. Aus Platzgründen können diese hier nicht alle namentlich erwähnt werden.
+Weiterhin danke ich meinen Eltern Vera und Rolf Hampp, meiner Schwester Frau Dr. Gabriele Hampp und meiner Patentante Frau Inge Grumer, die mir durch ihre Unterstützung das Studium ermöglicht haben.
