--- a/Masterarbeit 4/Tex/masterarbeit.tex
+++ b/Masterarbeit 4/Tex/masterarbeit.tex
@@ -53,7 +53,7 @@ California, 94105, USA. \\ Satz: PDF-\LaTeXe
 
 \input{abstract}
 \cleardoublepage
-%\input{danksagung}
+\input{danksagung}
 
 % inhaltsverzeichnis einfügen
 \tableofcontents
