--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -3,7 +3,7 @@
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\textwidth]{gatewa} %pdf, jpg, png...
-  \caption{BPMN Gateways}
+  \caption{BPMN Gateways \cite{allweyer2013}}
   \label{fig:gateways}
 \end{center}
 \end{figure}
@@ -12,7 +12,7 @@
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\textwidth]{BPM} %pdf, jpg, png...
-  \caption{BPMN Ereignisse}
+  \caption{BPMN Ereignisse \cite{allweyer2013}}
   \label{fig:BPM}
 \end{center}
 \end{figure}
@@ -20,7 +20,7 @@
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\textwidth]{BPM_2} %pdf, jpg, png...
-  \caption{BPMN Übersicht}
+  \caption{BPMN Übersicht \cite{allweyer2013}}
   \label{fig:BPM_2}
 \end{center}
 \end{figure}
@@ -267,8 +267,8 @@ Beispiel: Korrekt: [A,C,A,B,B]; Inkorrekt: [C]\\
 
 \chapter{Fragebögen}
 
-\includepdf[pages={1-7,9-12}]{Fragebogen1.pdf}
-\includepdf[pages={1-11}]{Fragebogen2.pdf}
+\includepdf[pages={1-7,9-12},width=\textwidth]{Fragebogen1.pdf}
+\includepdf[pages={1-11},width=\textwidth]{Fragebogen2.pdf}
 
 \chapter{Rohdaten}
 
