--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -20,7 +20,7 @@ Bei der \textit{Transparenz} geht es darum, dass alle Beteiligten am Prozess ein
 
 \subsection{Grundsätze ordnungsgemäßer Modellierung}
 
-Bei der Gestaltung eines Modells sollten grundlegende Prinzipien beachtet werden, um die Qualität eines Modells zu sichern. Hierfür gibt es die Grundsätze ordnungsgemäßer Modellierung, über deren Prinzipien Abbildung \ref{fig:Prinzipien} einen Überblick gibt  \cite{freund2007}.
+Bei der Gestaltung eines Modelles sollten grundlegende Prinzipien beachtet werden, um die Qualität eines Modelles zu sichern. Hierfür gibt es die Grundsätze ordnungsgemäßer Modellierung, über deren Prinzipien Abbildung \ref{fig:Prinzipien} einen Überblick gibt  \cite{freund2007}.
 
 \begin{figure}[htp]
 \begin{center}
@@ -30,12 +30,12 @@ Bei der Gestaltung eines Modells sollten grundlegende Prinzipien beachtet werden
 \end{center}
 \end{figure}
 
-Der \textit{Grundsatz der Richtigkeit} besitzt zwei verschiedene Ausprägungen: Eine syntaktische und eine semantische. Die syntaktische \textit{Richtigkeit} eines Modells wird durch die Einhaltung der Notationsregeln der dem Modell zugrunde liegenden Prozessmodellierungssprache erreicht \cite{journals95, becker2012prozessmanagement}. \newline
+Der \textit{Grundsatz der Richtigkeit} besitzt zwei verschiedene Ausprägungen: Eine syntaktische und eine semantische. Die syntaktische \textit{Richtigkeit} eines Modelles wird durch die Einhaltung der Notationsregeln der dem Modell zugrunde liegenden Prozessmodellierungssprache erreicht \cite{journals95, becker2012prozessmanagement}. \newline
 
-Ein Modell wird als semantisch korrekt, oder auch formal korrekt bezeichnet, wenn es dem ihm zugrunde liegenden Metamodell gegenüber vollständig und konsistent ist, d.h. es gibt den abzubildenden Sachverhalt korrekt wieder. Hierbei muss einerseits auf die korrekte Abbildung der Struktur des Metamodells, als auch des dort beschriebenen Verhaltens geachtet werden \cite{journals95, becker2012prozessmanagement}. \newline
+Ein Modell wird als semantisch korrekt, oder auch formal korrekt bezeichnet, wenn es dem ihm zugrunde liegenden Metamodell gegenüber vollständig und konsistent ist, d.h. es gibt den abzubildenden Sachverhalt korrekt wieder. Hierbei muss einerseits auf die korrekte Abbildung der Struktur des Metamodelles, als auch des dort beschriebenen Verhaltens geachtet werden \cite{journals95, becker2012prozessmanagement}. \newline
 
 
-Modelle werden üblicherweise in getrennten Sichten modelliert, um die Komplexität so gering wie möglich zu halten. Beispielsweise werden Prozesse in einem Prozessmodell, die Daten aber in einem Datenmodell modelliert. Werden bei einer Modellierung mehrere Sichten (z.B. Organisationssicht, Datensicht, Funktionssicht) modelliert, müssen diese auch ineinander integriert werden. Beim  \textit{Grundsatz des systematischen Aufbau} geht es darum, bei der Modellierung auch auf die anderen Sichten zu achten, um eine spätere konsistente Integration der verschiedenen Sichten zu gewährleisten. Insbesondere ist zu vermeiden, dass die gleichen Informationsobjekte mehrmals mit jeweils verschiedenen Begriffen verwendet werden. Weiterhin sollten die Eingabedaten eines Prozessmodells einen Verweis auf bestehende Datenmodelle enthalten \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.\newline
+Modelle werden üblicherweise in getrennten Sichten modelliert, um die Komplexität so gering wie möglich zu halten. Beispielsweise werden Prozesse in einem Prozessmodell, die Daten aber in einem Datenmodell modelliert. Werden bei einer Modellierung mehrere Sichten (z.B. Organisationssicht, Datensicht, Funktionssicht) modelliert, müssen diese auch ineinander integriert werden. Beim \textit{Grundsatz des systematischen Aufbau} geht es darum, bei der Modellierung auch auf die anderen Sichten zu achten, um eine spätere konsistente Integration der verschiedenen Sichten zu gewährleisten. Insbesondere ist zu vermeiden, dass die gleichen Informationsobjekte mehrmals mit jeweils verschiedenen Begriffen verwendet werden. Weiterhin sollten die Eingabedaten eines Prozessmodells einen Verweis auf bestehende Datenmodelle enthalten \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.\newline
 
 Der \textit{Grundsatz der Relevanz} besagt, dass alle Elemente und Verknüpfungen eines Modells, ohne die der Nutzen des Modells sinken würde, für die Modellierung relevant sind \cite{journals95, reinshagen2009}. Auf der anderen Seite sollten aber auch nur diejenigen Teile der Realität in das Modell aufgenommen werden, die wirklich notwendig sind. Es sollte somit darauf geachtet werden, nur so viele Informationen ins Modell zu bringen wie minimal benötigt werden \cite{journals95, freund2007,reinshagen2009}.\newline
 
@@ -50,7 +50,7 @@ Wird in unterschiedlichen Modellen der gleiche Sachverhalt abgebildet, so sollte
 \section{Prozessmodellierungssprachen}\label{sec:chapter3:Prozessmodellierungssprachen}
 
 Die Modellierung eines Prozesses mit natürlicher Sprache bringt einige Nachteile mit sich, wie z.B. fehlende Eindeutigkeit, schwer zu überprüfende Vollständigkeit und teilweise Widersprüche. Mögliche Folgen davon können unterschiedliche Interpretationen, Missverständnisse und falsche Schlussfolgerungen sein. Eine reine Beschreibung der Prozessmodelle mit mathematischen Modellen und Formalismen führt jedoch oftmals zu einer Verminderung der intuitiven Verständlichkeit der Prozessmodelle. Aus diesem Grund ist es sinnvoll den Prozess graphisch als Diagramm mit einer Prozessmodellierungssprache darzustellen, da diese eine Schnittstelle zwischen formaler Exaktheit und intuitiver Verständlichkeit bilden \cite{thomas2009,kircher2006}.  \newline
-Hierfür existieren eine Reihe verschiedener Prozessmodellierungssprachen, deren Vor- und Nachteile intensiv diskutiert werden. Ein viel erörteter Unterschied ist der zwischen imperativen und deklarativen Prozessmodellierungssprachen \cite{fahland2010}. \newline
+Hierfür existieren eine Reihe verschiedener Prozessmodellierungssprachen, deren Vor- und Nachteile intensiv diskutiert werden. Ein viel erörterter Unterschied ist der zwischen imperativen und deklarativen Prozessmodellierungssprachen \cite{fahland2010}. \newline
 Die ursprüngliche Unterscheidung zwischen imperativen und deklarativen Sprachen stammt aus der Programmierung. Während imperative Programmierung angibt, "Wie etwas zu tun ist", folgt deklarative Programmierung dem Ansatz \grqq Sag was benötigt wird und lass das System herausfinden, wie es erreicht werden kann\grqq \ \cite{pichler2012}.
 
 \subsection{Imperative Modellierung}
@@ -60,7 +60,7 @@ Imperative Programmierung wird als zustandsbehaftete Programmierung bezeichnet, 
 \subsubsection {BPMN}
 
 Die \textit{Business Process Modelling Notation (BPMN)} wurde von der \textit{Business Process Management Initiative} entwickelt und 2004 veröffentlicht. Seit 2005 wird sie von der \textit{Object Management Group} standardisiert und weiterentwickelt \cite{krallmann2013}.
-Die BPMN-Elemente lassen sich anhand der fünf Kategorien \textit{Swimlanes}, \textit{Flussobjekte}, \textit{verbindende Objekte}, \textit{Daten} und \textit{Artefakte} einteilen. Abbildung \ref{fig:BPMN} zeigt die Einteilung und die wichtigsten Prozess-Elemente von BPMN, welche nachfolgend genauer erläutert werden \cite{gpfert2012}. \newline
+Die BPMN Notationselemente lassen sich anhand der fünf Kategorien \textit{Swimlanes}, \textit{Flussobjekte}, \textit{verbindende Objekte}, \textit{Daten} und \textit{Artefakte} einteilen. Abbildung \ref{fig:BPMN} zeigt die Einteilung und die wichtigsten Prozess-Elemente von BPMN, welche nachfolgend genauer erläutert werden \cite{gpfert2012}. \newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -86,8 +86,8 @@ Mit Hilfe von \textit{Gateways} lässt sich der Prozessablauf kontrollieren und 
 
 
 \textit{Nachrichtenfluss}, \textit{Assoziation}, \textit{Datenassoziation} und \textit{Sequenzfluss} bilden zusammen die Kategorie \textbf{Verbindende Objekte}. Ein \textit{Nachrichtenfluss} wird dazu verwendet, den Nachrichtenfluss zwischen zwei getrennten Prozessteilnehmern, z.B. aus zwei verschiedenen Unternehmen, darzustellen. Mit Hilfe einer \textit{Assoziation} können Daten, Text und andere Artefakte mit Flussobjekten verknüpft werden. Hiermit werden die Ein- und Ausgabe von Aktivitäten aufgezeigt. Ein \textit{Sequenzfluss} dient dazu, die Reihenfolge der Aktivitäten im Prozess festzulegen \cite{white2004introduction}. \newline
-In der Kategorie \textbf{Daten} gibt es \textit{Datenobjekte}, \textit{DatenInput}, \textit{DatenOutput} und \textit{Datenspeicher}. \textit{Datenobjekte} geben hierbei an, welche Daten von den Aktivitäten benötigt werden, bzw. von diesen erzeugt werden \cite{white2004introduction}. Sie stellen somit Informationen dar, welche durch den Prozess fließen. Bei einem  \textit{Dateninput} handelt es sich um einen externen Input für den ganzen Prozess, der von einer Aktivität gelesen wird. Ein \textit{Datenoutput} hingegen wird als Ergebnis eines ganzen Prozesses erzeugt. Somit handelt es sich bei \textit{Dateninput}, bzw. \textit{Datenoutput} um Eingangs-, bzw. Ausgangsprozessschnittstellen \cite{bpmnposter}. Ein \textit{Datenspeicher} kann für den indirekten Austausch von Daten zwischen zwei verschiedenen Prozessteilnehmern verwendet werden. Hierfür ist es notwendig, dass beide Prozessteilnehmer Zugriff auf den \textit{Datenspeicher} haben \cite{allweyer2013}.\newline
-Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerkung} und \textit{Assoziation}. Diese ergänzen den Prozess um zusätzliche Informationen, haben jedoch keinerlei Einfluss auf diesen \cite{gpfert2012}. Eine \textit{Gruppierung} kann hierbei zur Dokumentation oder für Analysezwecke benutzt werden. Durch \textit{Anmerkungen} können dem Leser zusätzliche Informationen in Textform bereit gestellt werden \cite{white2004introduction}. Mit Hilfe einer \textit{Assoziation} lassen sich Datenobjekte mit Aktivitäten und Prozessen verknüpfen \cite{bpmnposter}. \newline
+In der Kategorie \textbf{Daten} gibt es \textit{Datenobjekte}, \textit{Dateninput}, \textit{Datenoutput} und \textit{Datenspeicher}. \textit{Datenobjekte} geben hierbei an, welche Daten von den Aktivitäten benötigt werden, bzw. von diesen erzeugt werden \cite{white2004introduction}. Sie stellen somit Informationen dar, welche durch den Prozess fließen. Bei einem  \textit{Dateninput} handelt es sich um einen externen Input für den ganzen Prozess, der von einer Aktivität gelesen wird. Ein \textit{Datenoutput} hingegen wird als Ergebnis eines ganzen Prozesses erzeugt. Somit handelt es sich bei \textit{Dateninput}, bzw. \textit{Datenoutput} um Eingangs-, bzw. Ausgangsprozessschnittstellen \cite{bpmnposter}. Ein \textit{Datenspeicher} kann für den indirekten Austausch von Daten zwischen zwei verschiedenen Prozessteilnehmern verwendet werden. Hierfür ist es notwendig, dass beide Prozessteilnehmer Zugriff auf den \textit{Datenspeicher} haben \cite{allweyer2013}.\newline
+Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerkung} und \textit{Assoziation}. Diese ergänzen den Prozess um zusätzliche Informationen, haben jedoch keinerlei Einfluss auf diesen \cite{gpfert2012}. Eine \textit{Gruppierung} kann hierbei zur Dokumentation oder für Analysezwecke benutzt werden. Durch \textit{Anmerkungen} können dem Leser zusätzliche Informationen in Textform bereitgestellt werden \cite{white2004introduction}. Mit Hilfe einer \textit{Assoziation} lassen sich Datenobjekte mit Aktivitäten und Prozessen verknüpfen \cite{bpmnposter}. \newline
  Eine Übersicht über alle Elemente der BPMN Notation kann Anhang A entnommen werden.\newline
 
 
@@ -96,11 +96,11 @@ Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerk
 
 \subsection{Deklarative Modellierung}
 
- Die deklarative Modellierung folgt im Gegensatz zur imperativen Modellierung einem \grqq Outside-In-Ansatz\grqq \ \cite{lichtenegger2012}. Das heißt, deklarative Sprachen legen den Ablauf nicht im Vorhinein fest \cite{pichler2012} und sie sind somit sehr flexibel \cite{reichert2012}. Zu Beginn befinden sich nur die Aktivitäten im Prozessmodell und erlauben jegliches Ausführungsverhalten. Erst wenn Constraints zum Modell hinzugefügt werden, werden schrittweise Ausführungsalternativen verworfen \cite{pichler2012}. Constraints lassen sich hierbei in die beiden verschiedenen Kategorien \textbf{Ausführungsconstraints} und \textbf{Terminierungsconstraints} einteilen. Die Ausführungsconstraints geben Einschränkungen für die Ausführung von Aktivitäten an. Hierbei kann es sich z.B. um die Anzahl möglicher Ausführungen für eine Aktivität oder eine Mindestzeitverzögerung zwischen zwei Aktivitäten handeln. Terminierungsconstraints hingegen führen auf, wann eine korrekte Terminierung (Beendigung) des Prozesses möglich ist. Es kann hier z.B. vorgeschrieben werden, dass eine Aktivität mindestens einmal ausgeführt werden muss oder dass der Aktivität A Aktivität B folgen muss. Bevor dies nicht geschehen ist, ist kein korrektes Ende des Prozesses möglich \cite{reichert2012}.  Abbildung \ref{fig:Dec} zeigt ein Beispiel für ein deklaratives Prozessmodell. Es besteht aus den drei Aktivitäten A,B und C sowie aus zwei Constraints:  Das Constraint zwischen A und B legt fest, dass Aktivität B Aktivität A vorausgehen muss und das Constraint bei Aktivität C legt fest, dass diese mindestens einmal ausgeführt werden muss, aber beliebig oft durchgeführt werden kann. Abgesehen von diesen Bedingungen, können die Aktivitäten sowohl beliebig oft als auch in beliebiger Reihenfolge ausgeführt werden. Es wäre z.B. [A,B,C,C,A,B,C] eine korrekte Ausführungsreihenfolge. Die Ausführungsreihenfolgen [C,B,C,A] oder [A,B,A,B] wären jedoch inkorrekt, da bei der ersten Ausführungsreihenfolge B vor A ausgeführt wird und somit das Constraint zwischen diesen beiden Aktivitäten verletzt würde. Bei der zweiten Ausführungsreihenfolge wird Aktivität C nicht bearbeitet, wodurch das Constraint verletzt wird \cite{reichert2012}. \newline
+ Die deklarative Modellierung folgt im Gegensatz zur imperativen Modellierung einem \grqq Outside-In-Ansatz\grqq \ \cite{lichtenegger2012}. Das heißt, deklarative Sprachen legen den Ablauf nicht im Vorhinein fest \cite{pichler2012} und sie sind somit sehr flexibel \cite{reichert2012}. Zu Beginn befinden sich nur die Aktivitäten im Prozessmodell und erlauben jegliches Ausführungsverhalten. Erst wenn Constraints zum Modell hinzugefügt werden, werden schrittweise Ausführungsalternativen verworfen \cite{pichler2012}. Constraints lassen sich hierbei in die beiden verschiedenen Kategorien \textbf{Ausführungsconstraints} und \textbf{Terminierungsconstraints} einteilen. Die Ausführungsconstraints geben Einschränkungen für die Ausführung von Aktivitäten an. Hierbei kann es sich z.B. um die Anzahl möglicher Ausführungen für eine Aktivität oder eine Mindestzeitverzögerung zwischen zwei Aktivitäten handeln. Terminierungsconstraints hingegen führen auf, wann eine korrekte Terminierung (Beendigung) des Prozesses möglich ist. Es kann hier z.B. vorgeschrieben werden, dass eine Aktivität mindestens einmal ausgeführt werden muss oder dass der Aktivität A Aktivität B folgen muss. Bevor dies nicht geschehen ist, kann der Prozess nicht korrekt enden \cite{reichert2012}.  Abbildung \ref{fig:Dec} zeigt ein Beispiel für ein deklaratives Prozessmodell. Es besteht aus den drei Aktivitäten A, B und C sowie aus zwei Constraints:  Das Constraint zwischen A und B legt fest, dass der Aktivität B die Aktivität A vorausgehen muss und das Constraint bei Aktivität C legt fest, dass diese mindestens einmal ausgeführt werden muss, aber beliebig oft durchgeführt werden kann. Abgesehen von diesen Bedingungen, können die Aktivitäten sowohl beliebig oft als auch in beliebiger Reihenfolge ausgeführt werden. Es wäre z.B. [A,B,C,C,A,B,C] eine korrekte Ausführungsreihenfolge. Die Ausführungsreihenfolgen [C,B,C,A] oder [A,B,A,B] wären jedoch inkorrekt, da bei der ersten Ausführungsreihenfolge B vor A ausgeführt wird und somit das Constraint zwischen diesen beiden Aktivitäten verletzt würde. Bei der zweiten Ausführungsreihenfolge wird Aktivität C nicht bearbeitet, wodurch das Constraint bei Aktivität C verletzt wird \cite{pesic2006}. \newline
 
 \begin{figure}[H]
 \begin{center}
-  \includegraphics[scale=0.6]{DecProcessModel} %pdf, jpg, png...
+  \includegraphics[scale=0.8]{DecProcessModel} %pdf, jpg, png...
   \caption{Deklarativer Beispiel-Prozess \cite{pesic2006}}
   \label{fig:Dec}
 \end{center}
@@ -108,19 +108,19 @@ Die Kategorie \textbf{Artefakte} beinhaltet \textit{Gruppierung}, \textit{Anmerk
 
 \subsubsection{ConDec}
 
-Die deklarative Modellierungssprache ConDec wurde erstmals unter dem Namen DecSerFlow veröffentlicht \cite{fahland2010}. Mit ConDec lassen sich einerseits sehr strenge Modelle erstellen, welche den gesamten Prozess im Detail vorgeben und andererseits sehr leichtgewichtige Modelle, welche zwar angegeben, welche Arbeit getan werden muss, aber nicht wie sie ausgeführt werden muss \cite{pesic2006}. \newline
-In ConDec gibt es die vier verschiedenen Arten von Contraints: \textit{Existence}, \textit{Choice}, \textit{Relation} und \textit{Negation}. Tabelle \ref{tab:tab3} zeigt die Bedeutung der verschiedenen Constraints. \newline
+Die deklarative Modellierungssprache ConDec wurde erstmals unter dem Namen DecSerFlow veröffentlicht \cite{fahland2010}. Mit ConDec lassen sich einerseits sehr strenge Modelle erstellen, welche den gesamten Prozess im Detail vorgeben und andererseits sehr leichtgewichtige Modelle, welche zwar angeben, welche Arbeit getan werden muss, aber nicht wie sie ausgeführt werden muss \cite{pesic2006}. \newline
+In ConDec gibt es die vier verschiedenen Arten von Contraints: \textit{Existenz}, \textit{Choice}, \textit{Relation} und \textit{Negation}. Tabelle \ref{tab:tab3} zeigt die Bedeutung der verschiedenen Constraints. \newline
 
 \begin{table}
 \begin{tabular}{|p{0.5\textwidth}|p{0.5\textwidth}|}
 \hline
 \textbf{Constraint} & \textbf{Erläuterung}\\
 \hline
-Existenz Constraints & Ein-stellige Kardinalitäts-Constraints. Sie geben an, wie oft eine Aktivität ausgeführt werden kann, bzw. muss.\\
+Existenz Constraints & Ein-stellige Kardinalitäts-Constraints. Sie geben an, wie oft eine Aktivität ausgeführt werden kann bzw. muss.\\
 \hline
 Choice Constraints & N-stellige Constraints. Sie geben die Notwendigkeit der Ausführung von Aktivitäten an, die zu einer Reihe möglicher Alternativen gehören, unabhängig von anderen Constraints. \\
 \hline
-Relation Constraints & Zwei-stellige Constraints. Sie geben vor, dass eine gewisse Aktivität ausgeführt werden muss falls eine andere Aktivitäten ausgeführt wird. Es können auch qualitative zeitliche Constraints zwischen diesen beiden Aktivitäten verlangt werden.\\
+Relation Constraints & Zwei-stellige Constraints. Sie geben vor, dass eine gewisse Aktivität ausgeführt werden muss falls eine andere Aktivität ausgeführt wird. Es können auch qualitative zeitliche Constraints zwischen diesen beiden Aktivitäten verlangt werden.\\
 \hline
 Negation Constraints & Stellt die negative Version der Relation Constraints dar. Sie verbieten explizit die Ausführung einer gewissen Aktivität, wenn eine andere Aktivität ausgeführt wird.\\
 \hline
@@ -147,7 +147,7 @@ Bei Signavio handelt es sich um ein webbasiertes Prozessmodellierungstool, welch
 \end{center}
 \end{figure} 
 
-Links in Abbildung \ref{fig:Signavio} ist die BPMN Palette zu sehen. Die einzelnen Elemente können per \textit{Drag and Drop} in das Arbeitsdokument gezogen werden. Signavio verfügt über Modellierungskonventionen. Mit diesen ist es  möglich, das Modell auf die Einhaltung von Modellierungsrichtlinien, wie z.B. Notationsumfang, Benennung, Prozessstruktur und Diagrammlayout zu überprüfen. Die Modelle können alle als PDF exportiert werden. \newline
+Links in Abbildung \ref{fig:Signavio} ist die BPMN Palette zu sehen. Die einzelnen Elemente können per \textit{Drag and Drop} in das Arbeitsdokument gezogen werden. Signavio verfügt über eine automatische Überprüfung von Modellierungskonventionen. Durch diese ist es möglich, das Modell auf die Einhaltung von Modellierungsrichtlinien, wie z.B. Notationsumfang, Benennung, Prozessstruktur und Diagrammlayout zu überprüfen. Die Modelle können alle als PDF exportiert werden. \newline
 In Abbildung \ref{fig:Simulation} ist die Simulations-Sicht von Signavio zu sehen. Hier kann der Benutzer den Prozessablauf simulieren. Dies kann einerseits mit Benutzerinteraktion Schritt für Schritt erfolgen oder auch im Ganzen durch den Simulator gesteuert werden, wobei XOR-Verzweigungen nach wie vor vom Benutzer ausgewählt werden müssen.
 \begin{figure}[H]
 \begin{center}
@@ -182,7 +182,7 @@ Abbildung \ref{fig:Declare} zeigt die Systemarchitektur von Declare.
 \end{figure} 
 
 Hieraus wird ersichtlich, dass \textit{Declare} mit den beiden Systemen \textit{YAWL} und \textit{ProM} kooperiert. Bei \textit{YAWL} handelt es sich um ein Workflow-Management System, welches auf strukturierte Workflows spezialisiert ist. Dies wirkt sich auf die Zusammenarbeit mit \textit{Declare} in der Art aus, dass die strukturierten Teile des Prozesses von \textit{YAWL} abgehandelt werden, während die unstrukturierten Teile von \textit{Declare} übernommen werden. Bei \textit{ProM} handelt es sich um ein Prozess-Mining-Tool. Hier werden bereits ausgeführte Prozesse von \textit{Declare} analysiert und darauf aufbauend werden dem Nutzer während der Prozessausführung Empfehlungen gegeben \cite{pesic2007declare}. \newline
-Weiterhin besteht \textit{Declare} selbst aus drei Komponenten \textit{Framework}, \textit{Designer} und \textit{Worklist}.  Beim \textit{Designer} handelt es sich um ein Modellierungstool, welches für Systemeinstellungen und die Prozessmodell-Entwicklung verwendet wird (Abbildung \ref{fig:Designer}). Das \textit{Framework} ist für das Prozess-Enactment (Prozessausführung) zuständig. Außerdem übernimmt es die Kommunikation mit \textit{YAWL} und \textit{ProM} und das Ändern der Prozessmodelle zur Laufzeit (Abbildung \ref{fig:Framework}). Die Prozessausführung wird von \textit{Worklist} durchgeführt. Hier können die Nutzer ihre zuvor erstellten Prozesse ausführen und können die von \textit{ProM} erstellten Empfehlungen sehen (Abbildung \ref{fig:Worklist}). Alle Modelle können als Bilddateien exportiert werden \cite{pesic2007declare}.
+Weiterhin besteht \textit{Declare} selbst aus drei Komponenten \textit{Framework}, \textit{Designer} und \textit{Worklist}.  Beim \textit{Designer} handelt es sich um ein Modellierungstool, welches für Systemeinstellungen und die Prozessmodell-Entwicklung verwendet wird (Abbildung \ref{fig:Designer}). Das \textit{Framework} ist für das Prozess-Enactment (Prozessbereitstellung) zuständig. Außerdem übernimmt es die Kommunikation mit \textit{YAWL} und \textit{ProM} und das Ändern der Prozessmodelle zur Laufzeit (Abbildung \ref{fig:Framework}). Die Prozessausführung wird von \textit{Worklist} durchgeführt. Hier können die Nutzer ihre zuvor erstellten Prozesse ausführen und können die von \textit{ProM} erstellten Empfehlungen sehen (Abbildung \ref{fig:Worklist}). Alle Modelle können als Bilddateien exportiert werden \cite{pesic2007declare}.
 
 
 
@@ -224,3 +224,5 @@ Weiterhin besteht \textit{Declare} selbst aus drei Komponenten \textit{Framework
 
 
 
+
+b
