--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -26,9 +26,10 @@ Im Laufe der Arbeit haben sich Ideen für weiter Forschungen im Bereich der Anwe
 
 Um den Vergleich zwischen den in BPMN und ConDec erstellten Modellen zu optimieren, sollten ebenfalls genaue Werte über den geistigen Aufwand zum Verstehen der Constraints in ConDec erhoben werden. Wie in Kapitel 4 erwähnt, existieren solche Werte für die Elemente der BPMN Notation (z.B. eine geistige Gewichtung von 1 für ein Sequenzflusselement, eine geistige Gewichtung von 4 für ein paralleles Gateway). Da keine genauen geistigen Gewichte für die Constraints in ConDec vorliegen, war der Vergleich zwischen den Modellen in der vorliegenden Arbeit nur grob möglich. Ein exakter Vergleich wäre mit der genauen Gegenüberstellung der Summen der geistigen Gewichte der jeweiligen Elemente in den BPMN und ConDec Modellen möglich.\newline
 
+
 \textbf{Geistige Gewichte für verschiedene Elemente in Prozessmodellen}
 
-Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints.  
+Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen auch genaue Werte, in wie stark die Komplexität eines Modelles wächst pro zusätzlichem unterschiedlichem Element. Es wäre z.B. wäre es interessant für genauere Vergleiche zwischen Prozessmodellierungssprachen, in wie weit sich die Komplexität eines Prozessmodelles erhöht, wenn sich darin statt drei unterschiedlicher Elemente fünf unterschiedliche Elemente befinden. Gerade bei den ConDec Modellen gab es oftmals mehr unterschiedliche Constraints in den Modellen als unterschiedliche Gateways in den BPMN Modellen. Daher wäre es für einen exakten Vergleich der Modelle nützlich, wenn man einen genauen Faktor hätte, um den sich die Komplexität in den ConDec Modellen erhöht, in Abhängigkeit der Anzahl der unterschiedlichen Constraints. \newline 
 
 
 \textbf{Erweiterung/Anpassung ConDec}
@@ -36,6 +37,8 @@ Genau wie geistige Werte für Constraints an sich nicht vorhanden sind, fehlen a
 Die Prozessmodellierungssprache ConDec hat großes Potenzial. Jedoch weist sie derzeit noch einige Mängel auf. Hier können die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten im Prozessmodell selbst genannt werden. ConDec sollte noch um weitere Notationselemente erweitert werden, welche Rollen und Artefakte darstellen.\newline
 Da auch die vielen unterschiedlichen Constraints bei ConDec ein Problem darstellen, könnte hier in weiterer Forschung versucht werden, die Constraints eventuell anzupassen/umzustellen, um ein kleineres Spektrum an Constraints zu erreichen.\newline
 Weiterhin sollte es auch möglich gemacht werden, mehrere Aktivitäten mit dem Init-Constraint auszustatten, um diese als mögliche Startaktivitäten zu markieren. Damit würde etwas Komplexität aus den Modellen heraus genommen werden. Der Leser des Modelles könnte sich dann auf einen Blick orientieren, bei welchen Aktivitäten gestartet werden kann.\newline
+
+\newpage
 
 \textbf{Weitere Studien mit breiterem Spektrum an Teilnehmern}
 
